tests/snapshots/deferred_issuance__issued.snap
---
source: tests/deferred_issuance.rs
assertion_line: 121
expression: vc
---
"@context": []
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: pending.user@example.com
  family_name: Person
  given_name: Pending
  id: "[id]"
validFrom: "[validFrom]"
